--- a/src/TidyWindow.App/Resources/ScrollBars.xaml
+++ b/src/TidyWindow.App/Resources/ScrollBars.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:behaviors="clr-namespace:TidyWindow.App.Behaviors">
         <!-- Reusable palette for the scrollbar experience -->
         <LinearGradientBrush x:Key="ScrollBar.TrackBrush"
                                                  StartPoint="0,0"
@@ -524,6 +525,10 @@
            TargetType="ScrollViewer">
         <Setter Property="PanningMode"
                 Value="Both"/>
+        <Setter Property="behaviors:SmoothScrollBehavior.IsEnabled"
+                Value="True"/>
+        <Setter Property="behaviors:SmoothScrollBehavior.Multiplier"
+                Value="0.36"/>
     </Style>
 
     <Style TargetType="ScrollViewer"
